# missions_backend

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.org  Dockerfile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml
.github/workflows/: build-and-push.yaml  deploy.yaml
api/: superuser_setup.py
api/audit_logs/: admin.py  api.py  constants.py  filters.py  models.py  schemas.py  selectors.py  services.py
api/audit_logs/migrations/: 0001_initial.py
api/authentication/: __init__.py  api.py  constants.py  middleware.py  permissions.py  permissions_list.py  schemas.py  utils.py
api/authentication/backends/: __init__.py  apple.py  base.py  google.py  jwt.py  registry.py
api/base/: api.py  filters.py  models.py  schemas.py
api/base/utils/: exceptions.py  file_parser.py  helpers.py
api/missions/: admin.py  analytics.py  api.py  constants.py  filters.py  models.py  schemas.py  selectors.py  services.py
api/missions/migrations/: 0001_initial.py  (+5 more)
api/project/: api.py  settings.py  urls.py
api/souls/: admin.py  api.py  apps.py  constants.py  filters.py  models.py  schemas.py  selectors.py  services.py
api/testimonies/: admin.py  api.py  apps.py  filters.py  models.py  schemas.py  selectors.py  services.py
api/users/: admin.py  api.py  constants.py  decorators.py  filters.py  managers.py  models.py  schemas.py  selectors.py  services.py
deploy/: FRONTEND_DEPLOY.md  FRONTEND_DEPLOY_VITE.md  GITOPS.md  nginx-frontend-vite.conf
deploy/terraform/: README.md  main.tf  outputs.tf  startup-script.sh  terraform.tfvars.example  variables.tf
(+6 files in other folders)
